@@ -20,6 +20,10 @@ dependencies {
     implementation("io.github.palexdev:materialfx:21.18.0-alpha")
     implementation("org.eclipse.jgit:org.eclipse.jgit:7.6.0.202603022253-r")
     implementation("org.glavo.kala:kala-compress-archivers-tar:1.27.1-3")
+    implementation("org.glavo.kala:kala-compress-compressors-bzip2:1.27.1-3")
+    implementation("org.glavo.kala:kala-compress-compressors-lz4:1.27.1-3")
+    implementation("org.glavo.kala:kala-compress-compressors-xz:1.27.1-3")
+    implementation("org.glavo.kala:kala-compress-compressors-zstandard:1.27.1-3")
     implementation("org.tomlj:tomlj:1.1.1")
 
     val osName = System.getProperty("os.name").lowercase()
@@ -69,6 +73,7 @@ application {
 tasks.test {
     useJUnitPlatform()
     timeout.set(Duration.ofMinutes(10))
+    jvmArgs("--enable-native-access=ALL-UNNAMED")
     val testTmpDir = layout.buildDirectory.dir("tmp/test-tmp")
     systemProperty("java.io.tmpdir", testTmpDir.get().asFile.absolutePath)
     doFirst {
